--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html {
     padding: 0;
     overflow: hidden;
     background: #f5f5f5;
-    font-family: Arial, sans-serif;
+    font-family: "Timew New Roman", Times, serif;
 }
 
 .gallery {
