--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ html, body {
     transition: transform 0.3s ease-out;
 }
 
+.letter a{
+    display: inline-block;  /* Make sure letters show up */
+    font-size: 4rem;
+    color: black;
+    position: absolute;
+}
+
 /* Letter Hover Effect */
 .letter:hover {
     transform: scale(1.2);
